...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="sectionIndexBackgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <color key="sectionIndexTrackingBackgroundColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="diaryTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="cu3-um-1W4" id="yW4-OS-Kgy"/>
                            <outlet property="delegate" destination="cu3-um-1W4" id="qZj-Md-cn9"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Дневник" id="qJh-gw-oUx">
                        <barButtonItem key="leftBarButtonItem" title="Add" image="calendar" id="k6z-Al-vfT"/>
                        <barButtonItem key="rightBarButtonItem" image="addEvent" id="UBB-e6-3Wk"/>
                    </navigationItem>
                    <connections>
                        <outlet property="leftButton" destination="k6z-Al-vfT" id="zWf-wL-YO8"/>
                        <outlet property="rightButton" destination="UBB-e6-3Wk" id="gm1-g4-Uir"/>
                        <segue destination="3Dz-ep-8c1" kind="presentation" identifier="AddSegue" id="An1-9s-TAF"/>
                        <segue destination="Xo9-hU-dpt" kind="presentation" identifier="ShowCalendarSegue" animates="NO" modalPresentationStyle="overCurrentContext" id="K8Z-TC-NnJ"/>
...
                        <connections>
                            <outlet property="dataSource" destination="07u-2v-zU1" id="OPq-Y7-F2b"/>
                            <outlet property="delegate" destination="07u-2v-zU1" id="F5c-ej-icQ"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Добавить" id="Rkm-YS-uuZ">
                        <barButtonItem key="leftBarButtonItem" title="Отмена" id="g4D-at-7zy">
                            <connections>
                                <action selector="cancelAction:" destination="07u-2v-zU1" id="fPs-u8-fqi"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="q0i-mJ-J5X" id="l1U-Qh-MHU"/>
                            <outlet property="delegate" destination="q0i-mJ-J5X" id="ZRR-oo-a2c"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Тренировку" id="kQi-Qt-fBT">
                        <barButtonItem key="rightBarButtonItem" title="Отмена" id="MPl-7w-c8S">
                            <connections>
                                <action selector="cancelAction:" destination="q0i-mJ-J5X" id="e53-ZU-NQG"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <stackView opaque="NO" contentMode="center" axis="vertical" distribution="equalSpacing" alignment="bottom" spacing="10" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q6t-S6-5RK">
                                <rect key="frame" x="20" y="47" width="335" height="593"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fjT-3c-fdM">
                                        <rect key="frame" x="277" y="0.0" width="58" height="33"/>
                                        <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="17"/>
                                        <state key="normal" title="Готово"/>
                                        <connections>
                                            <action selector="doneAction:" destination="Xo9-hU-dpt" eventType="touchUpInside" id="7ka-KQ-Qit"/>
                                        </connections>
                                    </button>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hoi-Nw-7wA" customClass="FSCalendar">
                                        <rect key="frame" x="0.0" y="32" width="335" height="335"/>
...
