...
    func setButtonItemsForEditor(){
        //tabBarController?.tabBar.isHidden = tableView.isEditing
        if tableView.isEditing == true {
            hideTabBar()
            rightButtonItem.action = #selector(saveAction)
            rightButtonItem.target = self
            rightButtonItem.title = "Сохранить"
            navigationItem.leftBarButtonItem = leftButtonItem
        }else{
            showTabBar()
            navigationItem.leftBarButtonItem = nil
            rightButtonItem.action = #selector(openForEditAction)
            rightButtonItem.target = self
...
            
            let row = showedRows[indexPath.row]
            
            switch row{
            case nameCellRow:
                cell = tableView.dequeueReusableCell(withIdentifier: EditFieldCell.identifier, for: indexPath) as! EditFieldCell
                (cell as! EditFieldCell).configure(placeHolder: "Название", text: selectedPoso.name, tag: indexPath.row, fieldIsEnabled: isEditingMode, fontSize: 17) { t in
                    self.selectedPoso.name = t
                }
                cell.selectionStyle = .none
            case infoCellRow:
                cell = tableView.dequeueReusableCell(withIdentifier: EditFieldCell.identifier, for: indexPath) as! EditFieldCell
                (cell as! EditFieldCell).configure(placeHolder: "Примечание", text: selectedPoso.info, tag: indexPath.row, fieldIsEnabled: isEditingMode, fontSize: 15) { t in
...
        
        if segue.identifier == "IngredientsListSegue" {
            let vc = (segue.destination as! UINavigationController).viewControllers.first as! SubEventsListTableViewController
            vc.selectedPosObjects = selectedPoso.subEvents
            vc.selectedPosoEvent = selectedPoso
            vc.selectedSubEventType = selectedEventType.subEventType
            vc.navigationItem.title = "Выберите"
            vc.navigationItem.rightBarButtonItem = nil
            vc.complitionHandler = { [unowned self] selectedSubEvents in
                self.selectedPoso.addSubEvents(subEvents: selectedSubEvents)
                self.tableView.reloadSections([1], with: .automatic)
                self.tableView.reloadRows(at: [IndexPath(row: self.statisticCellRow, section: 0)], with: .automatic)
            }
...
